--- a/CodingTask2.ipynb
+++ b/CodingTask2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "CodingTask2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPP/4oJ/D5hEyEjp0kEPmzD",
+      "authorship_tag": "ABX9TyPA61o9cCJB6urKuVTcETJg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,7 @@
       "source": [
         "# Coding Task 2\n",
         "\n",
-        "- Deadline (upload to Ilias): 2024-05-14 24:00\n",
+        "- Deadline (send your notebook with solutions to sigve.haug@unibe.ch): 2024-05-14 24:00\n",
         "- Solutions in lecture on 2024-05-15\n",
         "- Estimated effort: from 4 to 60 hours\n",
         "- Images (data) on Ilias in the Data folder, the images.zip file\n",
