--- a/15_ML_AccData.ipynb
+++ b/15_ML_AccData.ipynb
@@ -52,24 +52,7 @@
         "id": "i0B4fNelHOlO"
       },
       "source": [
-        "# About this Introduction to the Winter School on Deep Learning"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "n_5oRe0SXilM"
-      },
-      "source": [
-        "Basic machine learning refreshment with an introduction on how to perform typical machine learning tasks with Python.\n",
-        "\n",
-        "PD Dr. Sigve Haug, 2023. https://github.com/sigvehaug/MLwPython\n",
-        "\n",
-        "Based on notebooks by Honghong Fang, Mykhailo Vladymyrov & Aris Marcolongo, 2020. https://github.com/neworldemancer/DSF5\n",
-        "\n",
-        "This work is licensed under <a href=\"https://creativecommons.org/share-your-work/public-domain/cc0/\">CC0</a>.\n",
-        "\n",
-        "Duration: 14:00-17:00\n"
+        "# Introduction to ML with Data from Phone"
       ]
     },
     {
@@ -89,8 +72,7 @@
         "- ML Tasks\n",
         "- ML Performance\n",
         "- ML Data\n",
-        "- ML Tutorial\n",
-        "- School Outlook\n"
+        "- ML Tutorial (please jump straight to this)\n"
       ],
       "metadata": {
         "id": "5ixNJmwaUu6I"
