--- a/00_Introduction.ipynb
+++ b/00_Introduction.ipynb
@@ -149,23 +149,10 @@
         "print(gcd(100, 35))"
       ],
       "metadata": {
-        "id": "ZPt0EEwcUgSx",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "dca8f4d2-2314-4eed-eaaa-7736bf144e0c"
+        "id": "ZPt0EEwcUgSx"
       },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "6\n",
-            "5\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -254,26 +241,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "b10IDckBlNVC",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "03c6f79f-8f23-497c-ca49-bf127bc8acb1"
+        "id": "b10IDckBlNVC"
       },
       "source": [
         "# Change and run/execute this first line of Python\n",
         "print('In Python # means a comment, i.e. a code line that is not executed')"
       ],
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "In Python # means a comment, i.e. a code line that is not executed\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -381,7 +356,7 @@
         "id": "x-2y0jQgsyIJ"
       },
       "source": [
-        "# This is a Python code carrying out an algorithm which sums ob the natural number from 1 to 100. Play with it.\n",
+        "# This is a Python code carrying out an algorithm which sums up the natural numbers from 1 to 100. Play with it.\n",
         "sum = 0\n",
         "for i in range (1,100):\n",
         "  sum += i\n",
@@ -499,6 +474,15 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "QVgLepJc6KeZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [
         "import pandas as pd\n",
         "dataset1 = './drive/MyDrive/Courses/WS-DL-2024/Data-Walk.csv'\n",
@@ -560,6 +544,17 @@
       "metadata": {
         "id": "1N2GeE5H_J1B"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import seaborn as sns"
+      ],
+      "metadata": {
+        "id": "1DK-jO5-6o4P"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -695,6 +690,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### If we have time and energy we could do ..."
+      ],
+      "metadata": {
+        "id": "HnBXfLc47E7d"
+      }
     },
     {
       "cell_type": "markdown",
