Fixed small string

--- a/02_Intro_Pandas_Numpy.ipynb
+++ b/02_Intro_Pandas_Numpy.ipynb
@@ -517,7 +517,7 @@
         "* Pandas DataFrames are the standard for tabular data in Python.\n",
         "* Columns are backed by NumPy arrays, enabling fast computations.\n",
         "* Real datasets have missing values: you must inspect and handle them.\n",
-        "* You can create useful numeric features from SMILES strings."
+        "* You can create useful numeric features from currently existing ones."
       ]
     }
   ],
