--- a/02_Intro_Pandas_Numpy.ipynb
+++ b/02_Intro_Pandas_Numpy.ipynb
@@ -71,15 +71,17 @@
         "\n",
         "## 3. Loading the dataset\n",
         "\n",
+        "1. Download the data from the [Ilias page](https://ilias.unibe.ch/ilias.php?baseClass=ilrepositorygui&cmdNode=zo:ok&cmdClass=ilObjFileGUI&cmd=sendfile&ref_id=3663532).\n",
+        "2. Extract all files into a 'data' folder. Where you place the folder is important and changes its path!\n",
+        "\n",
         "### Option A — Load from local file\n",
         "\n",
-        "1. Download `train.csv` from Kaggle competition page\n",
-        "2. Upload it to your notebook environment\n",
-        "3. Use:\n",
+        "1. Upload it to your notebook environment\n",
+        "2. Use:\n",
         "\n",
         "```python\n",
         "# Adjust path if needed (e.g., \"/data/train.csv\" in Colab)\n",
-        "path = \"train.csv\"\n",
+        "path = \"data/train.csv\"\n",
         "df = pd.read_csv(path)\n",
         "\n",
         "df.head()\n",
@@ -93,7 +95,7 @@
         "    from google.colab import drive\n",
         "    drive.mount('/content/drive')\n",
         "\n",
-        "    path = \"/content/drive/MyDrive/data/train.csv\"  # adjust based on your file location in Google Drive\n",
+        "    path = \"/content/drive/MyDrive/DSF-DCBP/data/train.csv\"  # adjust based on your file location in Google Drive\n",
         "    df = pd.read_csv(path)\n",
         "    df.head()\n",
         "except ImportError:\n",
